--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ role-archive-tables:
 
 <div class="jumbotron">
     <p>
-        This is <b>not</b> the current CS/ECE-374-B site if you want the current course website, click the big red button above. I have received many emails asking for my past course materials (mostly my lectures and exams) so I am keeping this site alive as a repository of the content I created during my tenure as a ECE374 instructor. I also spent a year learning Jekyll to create course website that is simple, clean, and lightweight on the front-end and is easy to update on the backend. I invite any professors to contribute to this effort and feel free to email me with any suggestions. 
+        This is <b>not</b> the current CS/ECE-374-B site. I have received many emails asking for my past course materials (mostly my lectures and exams) so I am keeping this site alive as a repository of the content I created during my tenure as a ECE374 instructor. I also spent a year learning Jekyll to create course website that is simple, clean, and lightweight on the front-end and is easy to update on the backend. I invite any professors to contribute to this effort and feel free to email me with any suggestions. 
         <hr>
         Award-winning TA, Mr. Sumedh Vemuganti's discussion section recordings are now <a href="https://ecealgo.com/lectures.html">available</a> to view! Sumedh's passion for teaching and computer science is unmatched and I highly recommend his recordings!
         <hr>
