Fixing frontpage and adding GTAs

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@ role-archive-tables:
 
 <div class="jumbotron">
     <p>
-        {% if site.archived != true %}
+        {% if site.archived == true %}
         This is <b>not</b> the current CS/ECE-374-B site. I have received many emails asking for my past course materials (mostly my lectures and exams) so I am keeping this site alive as a repository of the content I created during my tenure as a ECE374 instructor. I also spent a year learning Jekyll to create course website that is simple, clean, and lightweight on the front-end and is easy to update on the backend. I invite any professors to contribute to this effort and feel free to email me with any suggestions. 
         <hr>
         {% endif %}
         CS/ECE 374 covers fundamental tools and techniques from theoretical computer science, including design and analysis of algorithms, formal languages and automata, computability, and complexity. Specific topics include regular and context-free languages, finite-state automata, recursive algorithms (including divide and conquer, backtracking, dynamic programming, and greedy algorithms), fundamental graph algorithms (including depth- and breadth-first search, topological sorting, minimum spanning trees, and shortest paths), undecidability, and NP-completeness. The course also has a strong focus on clear technical communication.
+        <hr>
         <details>
         <hr>
         <summary> Dedication </summary>    
