--- a/lectures.html
+++ b/lectures.html
@@ -6,7 +6,11 @@ title: Lectures and labs
 
 <p>I would like to thank Professor Sariel Har-Peled whose lectures I've based much of my own content on. These lectures are updated every semester to emphasize things I find important and match my voice. Though my lectures have diverged from his, <a href="https://courses.engr.illinois.edu/cs374/fa2022/a/lec/lec_prerec/">Prof. Har-Peled's lectures</a> are also great. </p>
 
-<p><em> Also, quick hint, icons are links to slides and video contents (And the "Read Me" link to some quick notes)!</em> By popular demand, we are also including links to Sumedh's (the true OG), discussion recordings! </p>
+<p><em> Also, quick hint, icons are links to slides and video contents (And the "Read Me" link to some quick notes)!</em> By popular demand, we are also including links to Sumedh's (the true OG), discussion recordings! </p> 
+
+{% if site.archived == true and site.teachingthissem == true %}   
+<p> Finally, I've left the links to the previosu semester's materials/recordings on the website for those you that want to speedrun ahead. The links will be updated as a semester goes on with links to the most current content.</p>
+{% endif %}
 
 <table id="customers">
     <tr>
