Updating lecture main page text.

--- a/lectures.html
+++ b/lectures.html
@@ -9,7 +9,7 @@ title: Lectures and labs
 <p><em> Also, quick hint, icons are links to slides and video contents (And the "Read Me" link to some quick notes)!</em> By popular demand, we are also including links to Sumedh's (the true OG), discussion recordings! </p> 
 
 {% if site.archived == true and site.teachingthissem == true %}   
-<p> Finally, I've left the links to the previosu semester's materials/recordings on the website for those you that want to speedrun ahead. The links will be updated as a semester goes on with links to the most current content.</p>
+<p> Finally, I've left the links to the previous semester's materials/recordings on the website for those you that want to speedrun ahead. The links will be updated as a semester goes on with links to the most current content.</p>
 {% endif %}
 
 <table id="customers">
