--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ role-archive-tables:
 </div>
 
 <section style="text-align: center;">
-    <a href="https://piazza.com/" class="button button1">Forum (Piazza)</a> 
-    <a href="https://www.gradescope.com/" class="button button2">Submit HWs (Gradescope)</a> 
-    <a href="https://canvas.illinois.edu/" class="button button3">Gradebook (Canvas)</a> 
+    <a href="https://piazza.com/class/mes86z3d2fl7fs/" class="button button1">Forum (Piazza)</a> 
+    <a href="https://www.gradescope.com/courses/1102773" class="button button2">Quiz/Exam Grades (Gradescope)</a> 
+    <a href="https://canvas.illinois.edu/courses/62414" class="button button3">Gradebook (Canvas)</a> 
 </section>
 
 <section>
